[tool.poetry]
name = "lc0-nps-tuner"
version = "0.2.0"
description = ""
authors = ["Brandon Navra <brandon.navra@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.*"
tqdm = "^4.28"
pexpect = "^4.6"
natsort = "^5.4"
Halo = "^0.0.18"
pyinstaller = "^3.4"
openpyxl = "^2.5"
click = "^7.0"
quick = {git = "https://github.com/szsdk/quick"}
pyqt5 = "^5.11"

[tool.poetry.dev-dependencies]
isort = "^4.3"
flake8 = "^3.6"
ipython = "^7.0"
pprintpp = "^0.4.0"
poetry = "^0.12.7"
black = "^18.3-alpha.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
